# AplicacionPresupuestos

./: .dockerignore  .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  nixpacks.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_client_service_records.py  0003_tenant_profile_fields.py  0004_client_soft_delete.py  0005_quote_public_share_token.py  0006_tenant_change_requests.py  0007_tenant_signup_requests.py  0008_signup_request_account_links.py  0009_tenant_memberships.py  0010_tenant_membership_payments.py  0011_membership_payment_quote_refs.py  0012_expand_tenant_logo_url.py  0013_membership_payment_status.py  0014_tenant_expenses.py  0015_audit_events.py
backend/app/api/: deps.py  main.py  middleware.py
backend/app/api/routes/: auth.py  (+5 more)
backend/app/core/: config.py  logging.py  security.py
backend/app/domain/: enums.py  money.py  quote_calculator.py
backend/app/infra/: db.py  models.py  pdf.py
backend/app/schemas/: audit.py  auth.py  client_service_records.py  clients.py  cost_items.py  expenses.py  quotes.py  tenants.py
backend/app/scripts/: __init__.py  ensure_platform_admin.py  ensure_platform_membership_services.py  prepare_alembic_version_table.py
backend/tests/: conftest.py  test_app_smoke.py  test_audit.py  test_auth.py  test_business_logging.py  test_clients.py  test_cors.py  test_cost_items.py  test_expenses.py  test_logging.py  test_models.py  test_quote_calculator.py  test_quote_pdf.py  test_quotes.py  test_tenancy.py  test_tenants.py
(+88 files in other folders)
