[project]
name = "presupuestos-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13",
  "bcrypt>=4.1,<5",
  "fastapi>=0.115",
  "passlib[bcrypt]>=1.7",
  "psycopg[binary]>=3.2",
  "pydantic-settings>=2.6",
  "python-jose[cryptography]>=3.3",
  "python-multipart>=0.0.12",
  "reportlab>=4.2",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.32"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.3",
  "pytest-asyncio>=0.24"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
